# brook

./: Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
embed_ytdlp/: Cargo.toml
embed_ytdlp/src/: lib.rs
src/: main.rs
src/ytdlp/: cmd.rs  mod.rs
ui/: stack.go  stack_test.go
ui/navigator/: main.go  stack.go  stack_test.go
