[package]
name = "brook"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TUI music player prototype"
readme = "README.md"
authors = ["Ritesh Ghosh <ghoshritesh55@gmail.com>"]
keywords = ["music", "player", "tui", "cli", "youtube_music"]
repository = "https://github.com/ghoshRitesh12/brook"

[dependencies]
glob = "0.3.2"
home = "0.5.11"
once_cell = "1.20.3"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["process"] }
